control-plane/gateway07/gateway-api-0.7.1-custom/conformance/tests/httproute-redirect-host-and-status.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: redirect-host-and-status
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hostname-redirect
    filters:
    - type: RequestRedirect
      requestRedirect:
        hostname: example.org
  - matches:
    - path:
        type: PathPrefix
        value: /host-and-status
    filters:
    - type: RequestRedirect
      requestRedirect:
        statusCode: 301
        hostname: example.org
